--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "css-declaration-sorter": "^7.2.0",
     "prettier": "^3.6.2",
     "prettier-plugin-css-order": "^2.1.2"
   }
